syntax = "proto3";

option csharp_namespace = "CrewService.BlazorUI";

package auth;

service AuthSrvc {

	rpc AuthenticateUser (AuthRequest) returns (AuthResponse){}

	rpc RegisterUser (RegisterRequest) returns (RegisterResponse){}

	rpc RefreshJwtToken (RefreshRequest) returns (AuthResponse){}
}

message AuthRequest {
	string user_name = 1;
	string password = 2;
}

message AuthResponse{
	string token = 1;
	int64 token_expired = 2;
	string refresh_token = 3;
	string full_name = 4;
	string theme_name = 5;
	string theme_mode = 6;
	bool success = 7;
	repeated string message = 8;
}

message RegisterRequest{
	string email = 1;
	string password = 2;
}

message RegisterResponse{
	bool success = 1;
	repeated string message = 2;
}

message RefreshRequest{
	string jwt_token = 1;
	string refresh_token = 2;
}